third_party/rust/lazy_static-0.2.11/tests/compile-fail/static_is_sized.rs
// error-pattern:the trait bound `str: std::marker::Sized` is not satisfied
#[macro_use]
extern crate lazy_static;

lazy_static! {
    pub static ref FOO: str = panic!();
}


fn main() {
}
